fixed rightmost heart not showing on screen
probably a lot of other things it has been a while

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -138,7 +138,7 @@ select {
 }
 
 .search-result img {
-    width: clamp(100px, 40vw, 420px);
+    width: clamp(100px, 40vw, 400px);
     border-radius: 10px;
     margin-bottom: 1em;
     cursor: pointer;
